--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects</h1>
-                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
+                <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
             <img src="images/banner.png" alt="">
@@ -30,10 +30,21 @@
     </header>
 
     <main>
-        <section>
-            .
+        <section class="team-img-container">
+                <div class="team-image">
+                    <img src="images/team1.png" alt="">
+                    <img src="images/team2.png" alt="">
+                    <img src="images/team3.png" alt="">
+                    <img src="images/team4.png" alt="">
+                </div>
+                <div class="team-content">
+                    <h2><span class="quick">Quick list</span> of Our <br> <span class="feature">Features</span></h2>
+                    <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button class="btn-primary">Explore more</button>
+                </div>
+            
         </section>
-
+<!-- features s -->
     </main>
 
     <footer>
