--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class="title">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -44,7 +44,36 @@
                 </div>
             
         </section>
-<!-- features s -->
+<!-- features section start-->
+        <section class="feature-container">
+            <div class="feature-content">
+                <h3 class="title">Features you will <br> love & enjoy</h3>
+                <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
+                <div class="card">
+                    <h4>Desktop & Mobile Version</h4>
+                    <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                </div>
+                <div class="card">
+                    <h4>Drag & Drop Builder</h4>
+                    <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                </div>
+                <div class="card">
+                    <h4>Awesome Modern Design</h4>
+                    <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                </div>
+                <div class="card">
+                    <h4>Super Easy to Edit</h4>
+                    <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                </div>
+            </div>
+            <div class="feature-image">
+                <img src="images/architect.png" alt="">
+                <div class="ten-years">
+                    <h2>10+Year</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
